--- a/node.js/config.json
+++ b/node.js/config.json
@@ -3,5 +3,5 @@
 	"decodeFolder":"../../../data_files/decoded_files/",
 	"csvFolder":"../../../data_files/csv_files/",
 	"recursive":true,
-	"filter":"planbz"
+	"filter":null
 }
