--- a/node.js/config.json
+++ b/node.js/config.json
@@ -1,7 +1,7 @@
 {
-	"planFolder":"../../../data_files/plan_files/",
-	"decodeFolder":"../../../data_files/decoded_files/",
+	"planFolder":"../data/plan_files/",
+	"decodeFolder":"../data/decoded_files/",
 	"recursive":true,
 	"folderFilter":false,
-	"planFilter":"planuk"
+	"planFilter":"planb"
 }
